--- a/AppEvidenciaAprendizaje/AppEvidenciaAprendizaje/AppEvidenciaAprendizaje/View/FormsAssistControlPage.xaml
+++ b/AppEvidenciaAprendizaje/AppEvidenciaAprendizaje/AppEvidenciaAprendizaje/View/FormsAssistControlPage.xaml
@@ -1,14 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:valueConverters="clr-namespace:AppEvidenciaAprendizaje.ValueConverters;assembly=AppEvidenciaAprendizaje"
              x:Class="AppEvidenciaAprendizaje.View.FormsAssistControlPage">
+  <ContentPage.Resources>
+    <ResourceDictionary>
+      <valueConverters:AverageValueConverter x:Key="MyColorCvt"/>
+    </ResourceDictionary>
+  </ContentPage.Resources>
+
   <StackLayout>
     <Button Text="Cargar lista" Command="{Binding  LoadDirectoryCommand}"/>
     <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}"/>
-    <ListView ItemsSource="{Binding Students}">
+    <ListView ItemsSource="{Binding Students}" x:Name="LvStudents">
       <ListView.ItemTemplate>
         <DataTemplate>
-          <ImageCell Text="{Binding Name}" Detail="{Binding Average}"></ImageCell>
+          <ImageCell TextColor="{Binding Average,Converter={StaticResource MyColorCvt}}" Text="{Binding Name}" Detail="{Binding Average}"></ImageCell>
         </DataTemplate>
       </ListView.ItemTemplate>
     </ListView>
